--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
    },
    "homepage": "https://github.com/piosystems/capstone-project-book1#readme",
    "devDependencies": {
-      "typescript": "3.3.3333",
+      "@types/node": "^12.7.12",
       "ts-node": "3.3.0",
-      "@types/node": "^8.0.29"
+      "typescript": "^3.3.3333"
    },
    "dependencies": {
-      "@types/node": "^12.7.12",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.19"
